[package]
name = "trulioo"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[dependencies]
indexmap = {version = "1.3", features = ["serde-1"] }
isahc = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

[dev-dependencies]
async-std = "1.1.0"
toml = "0.5"
