[package]
name = "website-api-tester"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[dependencies]
base64-url = "1.1"
bs58 = { version = "0.3", features = ["check"] }
celes = "1.0"
isahc = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
sodiumoxide = "0.2.5"
structopt = "0.3"
trace-macro = "1.1"
web-view = "0.5.4"
