[package]
name = "token-website"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3"
async-std = "1.1"
base64-url = "1.1"
bs58 = { version = "0.3.0", features = ["check"] }
celes = "1.0"
dirs = "2.0"
ed25519-dalek = "1.0.0-pre.3"
hmac = "0.7"
lazy_static = "1.4"
lox = { version = "0.4", path = "../lox/lox" }
rand = "0.7"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features =  false, features = ["serve", "helmet", "json"] }
rpassword = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
structopt = "0.3"
subtle = "2.2"
toml = "0.5"
trulioo = { version = "0.1", path = "../trulioo" }
zeroize = "1.1"
